--- a/app/scss/index.scss
+++ b/app/scss/index.scss
@@ -115,15 +115,16 @@
 }
 
 .best__table__line {
-  background: $blue_dark;
-  height: 80px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  // height: 80px;
+  height: auto;
+  // display: flex;
+  // align-items: center;
+  // justify-content: center;
   width: 100%;
   background: $blue_dark;
 
   .best__table__line__wrapper {
+    height: 80px;
     height: 100%;
     width: 100%;
     display: grid;
@@ -138,6 +139,14 @@
 
   &:nth-child(odd) {
     background: #1d2442;
+
+    .best__info {
+      background: #1d2442;
+    }
+
+    .best__info__line:nth-child(even) {
+      background: $blue_dark;
+    }
   }
 
   &--banner {
@@ -146,6 +155,18 @@
 
   &--hidden {
     display: none;
+  }
+
+  &--active {
+    .best__info {
+      display: block;
+    }
+
+    .obzor__open {
+      img {
+        transform: rotate(-180deg);
+      }
+    }
   }
 }
 
@@ -336,6 +357,10 @@
   &:hover {
     background: rgba(131, 143, 192, 0.4);
   }
+
+  img {
+    transition: all 0.2s linear;
+  }
 }
 
 .best__table {
@@ -344,7 +369,9 @@
 
 // best info
 .best__info {
-  margin-top: 26px;
+  display: none;
+  padding-top: 26px;
+  border-top: 1px solid rgba(131, 143, 192, 0.2);
 
   .row {
     margin: 0;
@@ -1238,10 +1265,6 @@
     }
   }
 
-  .best__table__line {
-    height: 60px;
-  }
-
   .best__obzor__descr {
     font-weight: 500;
     font-size: 13px;
@@ -1256,7 +1279,6 @@
   }
 
   .best__info {
-    display: none;
   }
 
   .best__description {
@@ -1277,6 +1299,37 @@
 
   .best__table {
     border-bottom: none;
+  }
+
+  .best__info__title {
+    padding-left: 15px;
+    margin-bottom: 8px;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 140%;
+  }
+
+  .best__info__col {
+    padding: 0;
+    margin-bottom: 20px;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
+
+  .best__info__text {
+    font-size: 13px;
+    line-height: 28px;
+    letter-spacing: -0.2px;
+  }
+
+  .best__info {
+    padding-top: 16px;
+  }
+
+  .best__info__line {
+    padding: 8px 0;
   }
 
   .prognosis {
