--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -1,14 +1,9 @@
 @import "config";
 @import "index";
-@import "news";
-@import "bonus";
-@import "prognoz";
-@import "obzory";
-@import "books";
+// @import "news";
+// @import "bonus";
+// @import "prognoz";
+// @import "obzory";
+// @import "books";
+@import "infopage";
 @import "layout";
-
-@media (max-width: $tablet) {
-}
-
-@media (max-width: $mobile) {
-}
