--- a/app/scss/_config.scss
+++ b/app/scss/_config.scss
@@ -19,15 +19,15 @@ $mobile-sm: 375px;
     font-family: $fname;
     font-style: $fstyle;
     font-weight: $fweight;
-    src: local($fname), url($furl) format("woff2");
+    src: local($fname), url($furl) format("truetype");
     // font-display: swap; // Uncomment to initially display system fonts
   }
 }
 
-@include font("Roboto", normal, 400, "../fonts/Roboto-Regular.woff2");
-@include font("Roboto", italic, 400, "../fonts/roboto-italic-webfont.woff2");
-@include font("Roboto", normal, 500, "../fonts/Roboto-Medium.woff2");
-@include font("Roboto", normal, 700, "../fonts/roboto-bold-webfont.woff2");
+@include font("Roboto", normal, 400, "../fonts/Roboto-Regular.ttf");
+@include font("Roboto", italic, 400, "../fonts/Roboto-Italic.ttf");
+@include font("Roboto", normal, 500, "../fonts/Roboto-Medium.ttf");
+@include font("Roboto", normal, 700, "../fonts/Roboto-Bold.ttf");
 
 // GENERAL DOCUMENT STYLES
 
