--- a/app/scss/infopage.scss
+++ b/app/scss/infopage.scss
@@ -518,6 +518,11 @@
   .infopage__reviews__item__body {
     margin-bottom: 21px;
   }
+
+  .license__item {
+    font-size: 13px;
+    line-height: 140%;
+  }
 }
 
 @media (max-width: $mobile) {
