Создал новый css-файл infopage

--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -1,9 +1,9 @@
 @import "config";
-@import "index";
+// @import "index";
 // @import "news";
 // @import "bonus";
 // @import "prognoz";
 // @import "obzory";
 // @import "books";
-@import "infopage";
+// @import "infopage";
 @import "layout";
