--- a/app/scss/layout.scss
+++ b/app/scss/layout.scss
@@ -63,7 +63,7 @@ strong {
   width: 100%;
   height: 100%;
   background: rgba(27, 33, 59, 0.7);
-  z-index: 5;
+  z-index: 6;
 
   &--active {
     display: block;
@@ -625,6 +625,10 @@ strong {
   display: flex;
   align-items: center;
   justify-content: space-between;
+}
+
+.mobile__nav {
+  display: none;
 }
 
 // menu
@@ -1529,6 +1533,49 @@ strong {
     &:focus {
       outline: none;
     }
+  }
+
+  .mobile__nav {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 50px;
+    width: 100%;
+    background: $blue_light;
+    filter: drop-shadow(0px -4px 10px rgba(27, 33, 59, 0.6));
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    z-index: 5;
+  }
+
+  .mobile__nav__wrapper {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 19px;
+  }
+
+  .mobile__nav__link {
+    text-decoration: none;
+    font-size: 10px;
+    line-height: 12px;
+    color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    transition: all 0.2s linear;
+
+    &:hover {
+      opacity: 0.7;
+    }
+  }
+
+  .mobile__nav__text {
+    display: inline-block;
+    margin-top: 5px;
   }
 
   .breadcrumbs {
