--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -5,7 +5,7 @@
 // @import "prognoz";
 // @import "obzory";
 // @import "books";
-// @import "infopage";
+@import "infopage";
 @import "app";
 @import "layout";
 
