--- a/app/scss/app.scss
+++ b/app/scss/app.scss
@@ -770,7 +770,7 @@
 
   .app__parners__fade {
     position: absolute;
-    bottom: 35px;
+    top: 0;
     right: 0;
     width: 26.57px;
     height: 155.32px;
@@ -890,7 +890,7 @@
     height: 245px;
     width: 11px;
     right: 0;
-    bottom: 14px;
+    top: 0;
     background: linear-gradient(270deg, #203d5e 0%, rgba(32, 60, 94, 0) 100%);
   }
 }
