--- a/app/scss/app.scss
+++ b/app/scss/app.scss
@@ -770,7 +770,7 @@
 
   .app__parners__fade {
     position: absolute;
-    top: 0;
+    top: 25px;
     right: 0;
     width: 26.57px;
     height: 155.32px;
