Добавил страницу bonus2.html

--- a/app/scss/index.scss
+++ b/app/scss/index.scss
@@ -502,6 +502,14 @@
   &:hover {
     background: $blue_hover;
   }
+
+  &--purple {
+    background: $purple;
+
+    &:hover {
+      background: $purple_hover;
+    }
+  }
 }
 
 // Prognosis
