--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -1,10 +1,10 @@
 @import "config";
-// @import "index";
-// @import "news";
-// @import "bonus";
-// @import "prognoz";
-// @import "obzory";
-// @import "books";
+@import "index";
+@import "news";
+@import "bonus";
+@import "prognoz";
+@import "obzory";
+@import "books";
 @import "infopage";
 @import "app";
 @import "layout";
