--- a/app/scss/bonus.scss
+++ b/app/scss/bonus.scss
@@ -232,6 +232,323 @@
   max-width: 285px;
 }
 
+// Bonus 2
+.bonus__sort {
+  margin-bottom: 31px;
+}
+.bonus__sort__wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  gap: 0 11px;
+
+  margin-bottom: -10px;
+}
+
+.bonus__sort__item {
+  font-size: 14px;
+  line-height: 16px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  width: 167px;
+  height: 38px;
+  // margin-right: 12.54px;
+  margin-bottom: 10px;
+
+  text-decoration: none;
+  cursor: pointer;
+  transition: all 0.2s linear;
+
+  color: #ffffff;
+  background: rgba(131, 143, 192, 0.1);
+  border: 1px solid #838fc0;
+  box-sizing: border-box;
+  border-radius: 100px;
+
+  &:hover {
+    color: #838fc0;
+    background: transparent;
+  }
+
+  &--active {
+    .bonus__sort__icon {
+      transform: rotate(180deg);
+    }
+  }
+}
+
+.bonus__sort__icon {
+  margin-left: 10px;
+
+  transition: all 0.2s linear;
+}
+
+.bonus__intro {
+  margin-bottom: 33.5px;
+}
+
+.bonus__banner {
+  position: relative;
+
+  width: 885px;
+
+  .infopage__banner__number {
+    align-items: center;
+
+    margin-bottom: 25px;
+  }
+
+  .infopage__banner__number__line {
+    font-weight: 500;
+    font-size: 30px;
+    line-height: 35px;
+
+    margin-bottom: 0;
+  }
+
+  .infopage__banner__reviews {
+    margin-bottom: 23px;
+  }
+
+  .infopage__banner__reviews__list {
+    margin-bottom: 5px;
+  }
+
+  .infopage__banner__reviews__item {
+    margin-right: 3px;
+  }
+}
+
+.bonus__banner__content {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  z-index: 2;
+
+  width: 100%;
+}
+
+.bonus__banner__top {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+
+  padding: 0 30px;
+  margin-bottom: 30px;
+}
+
+.bonus__banner__logo {
+  margin-bottom: 25px;
+}
+
+.bonus__banner__btn.btn {
+  padding: 12.5px 20px;
+}
+
+.bonus__banner__description {
+  font-size: 16px;
+  line-height: 140%;
+
+  max-width: 499px;
+  width: 100%;
+  padding: 31px 22px;
+
+  background: rgba(131, 143, 192, 0.1);
+  border: 1px solid #838fc0;
+  box-sizing: border-box;
+  backdrop-filter: blur(10px);
+  border-radius: 10px;
+}
+
+.bonus__menu {
+  background: $blue_dark;
+
+  margin-bottom: 20px;
+  padding: 17px 25px;
+
+  border-radius: 10px;
+}
+
+.bonus__menu__wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.bonus__menu__item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  width: 110px;
+  height: 110px;
+
+  text-decoration: none;
+  transition: all 0.2s linear;
+
+  background: rgba(131, 143, 192, 0.1);
+  border: 1px solid #838fc0;
+  border-radius: 10px;
+
+  &:hover {
+    background: transparent;
+  }
+}
+
+.bonus__menu__item__text {
+  font-size: 14px;
+  line-height: 16px;
+
+  display: inline-block;
+
+  margin-top: 5px;
+
+  color: #ffffff;
+}
+
+.bonus__rate {
+  margin-bottom: 40px;
+}
+
+.bonus__table {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  margin-bottom: 42px;
+
+  background: $blue_dark;
+  border-radius: 10px;
+}
+
+.bonus__table__col {
+  width: 50%;
+
+  &:first-child {
+    border-right: 1px solid rgba(255, 255, 255, 0.2);
+  }
+}
+
+.bonus__table__line {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+
+  width: 100%;
+  height: 38px;
+  padding: 0 25px;
+
+  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+
+  &:last-child {
+    border-bottom: none;
+  }
+
+  &--header {
+    font-size: 13px;
+    line-height: 15px;
+
+    justify-content: center;
+
+    background: #1d2442;
+  }
+
+  &--first {
+    border-radius: 10px 0 0 0;
+  }
+
+  &--second {
+    border-radius: 0 10px 0 0;
+  }
+}
+
+.legal {
+  padding: 25px 0;
+  margin-top: 30px;
+
+  background: #1d2442;
+}
+
+.legal__title {
+  font-weight: 500;
+  font-size: 30px;
+  line-height: 35px;
+
+  margin-bottom: 18px;
+
+  color: #ffffff;
+}
+
+.legal__wrapper {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+}
+
+.legal__col {
+  width: 49%;
+
+  background: $blue_dark;
+  border-radius: 10px;
+}
+
+.legal__item {
+  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+
+  &:last-child {
+    border-bottom: none;
+  }
+}
+
+.legal__item__wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  width: 100%;
+  height: 66px;
+  padding: 0 25px;
+}
+
+.legal__present {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.legal__present__icon {
+  margin-right: 10px;
+}
+
+.legal__present__value {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 28px;
+}
+
+.legal__btns {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  gap: 20px;
+}
+
+.legal__btn.btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  width: 85px;
+  height: 39px;
+  padding: 0;
+}
+// Bonus 2 END
+
 @media (max-width: $tablet) {
   .bonus {
     padding: 0 15px;
@@ -357,6 +674,107 @@
   .filter__body__inner {
     height: 80vh;
   }
+
+  // Bonus 2
+  .bonus__banner {
+    margin: 0 auto;
+    width: 348px;
+    .best__all {
+      border-radius: 0 0 10px 10px;
+    }
+  }
+
+  .bonus__banner__top {
+    flex-direction: column;
+
+    margin-bottom: 23px;
+    padding: 0 15px;
+  }
+
+  .bonus__banner__btn {
+    margin-bottom: 23px;
+  }
+
+  .bonus__banner__description {
+    font-size: 15px;
+    line-height: 140%;
+
+    max-width: 100%;
+    padding: 13px 14px 17px 20px;
+  }
+
+  .bonus__banner__all {
+    height: 57px;
+  }
+
+  .legal {
+    margin: 20px 15px;
+    padding: 18px 0;
+    padding-bottom: 0;
+
+    background: $blue_dark;
+    border-radius: 10px;
+
+    .container {
+      padding: 0;
+    }
+  }
+
+  .legal__title {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 23px;
+
+    margin-bottom: 20px;
+    padding: 0 14px;
+  }
+
+  .legal__wrapper {
+    flex-direction: column;
+  }
+
+  .legal__col {
+    width: 100%;
+
+    background: transparent;
+    border-radius: 0;
+
+    &:first-child {
+      .legal__item {
+        &:first-child {
+          border-top: 1px solid rgba(255, 255, 255, 0.2);
+        }
+
+        &:last-child {
+          border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+        }
+      }
+    }
+  }
+
+  .legal__item__wrapper {
+    height: 53px;
+    padding: 0 14px;
+  }
+
+  .legal__logo {
+    max-width: 81px;
+  }
+
+  .legal__present__value {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 28px;
+
+    letter-spacing: -0.2px;
+  }
+
+  .legal__btn {
+    &--obzor {
+      display: none !important;
+    }
+  }
+  // Bonus 2 END
 }
 
 @media (max-width: $mobile) {
@@ -371,4 +789,48 @@
     max-width: 348px;
     width: 100%;
   }
+
+  // Bonus 2
+  .bonus__intro {
+    margin-bottom: 25px;
+  }
+
+  .bonus__menu {
+    padding: 15px 14px;
+  }
+
+  .bonus__menu__wrapper {
+    flex-wrap: wrap;
+    gap: 19px 7px;
+  }
+
+  .bonus__menu__item {
+    flex-direction: row;
+    justify-content: flex-start;
+
+    width: 155px;
+    height: 55px;
+    padding: 10px 15px;
+  }
+
+  .bonus__menu__item__icon {
+    width: 100%;
+    max-width: 35px;
+  }
+
+  .bonus__menu__item__text {
+    margin-top: 0;
+    margin-left: 5px;
+  }
+
+  .bonus__table {
+    margin-bottom: 21px;
+  }
+
+  .bonus__table__line {
+    &--header {
+      justify-content: flex-start;
+    }
+  }
+  // Bonus 2 END
 }
