--- a/app/scss/bonus.scss
+++ b/app/scss/bonus.scss
@@ -250,13 +250,14 @@
   font-size: 14px;
   line-height: 16px;
 
+  position: relative;
+
   display: flex;
   align-items: center;
   justify-content: center;
 
   width: 167px;
   height: 38px;
-  // margin-right: 12.54px;
   margin-bottom: 10px;
 
   text-decoration: none;
@@ -270,21 +271,75 @@
   border-radius: 100px;
 
   &:hover {
-    color: #838fc0;
     background: transparent;
+
+    .bonus__sort__icon {
+      opacity: 0.7;
+    }
   }
 
   &--active {
     .bonus__sort__icon {
-      transform: rotate(180deg);
+      transform: rotate(0deg);
+    }
+
+    .bonus__sort__menu {
+      display: block;
     }
   }
+
+  &--link {
+    &:hover {
+      color: #838fc0;
+    }
+  }
+}
+
+.bonus__sort__item__wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  width: 100%;
+  height: 100%;
 }
 
 .bonus__sort__icon {
   margin-left: 10px;
 
+  transform: rotate(180deg);
   transition: all 0.2s linear;
+}
+
+.bonus__sort__menu {
+  display: none;
+
+  position: absolute;
+  top: 39px;
+  left: 0;
+  z-index: 2;
+
+  width: 100%;
+
+  background: $blue_dark;
+  border-radius: 5px;
+  box-shadow: rgba(131, 143, 192, 0.1);
+}
+
+.bonus__sort__menu__item {
+  padding: 10px 0;
+
+  transition: all 0.2s linear;
+
+  border-bottom: 1px solid #838fc0;
+
+  &:last-child {
+    border-bottom: none;
+  }
+
+  &:hover {
+    color: #838fc0;
+  }
 }
 
 .bonus__intro {
@@ -800,6 +855,15 @@
   }
 
   // Bonus 2
+  .bonus__sort__wrapper {
+    justify-content: space-between;
+    gap: 0;
+  }
+
+  .bonus__sort__item {
+    width: 49%;
+  }
+
   .bonus__intro {
     margin-bottom: 25px;
   }
@@ -810,14 +874,14 @@
 
   .bonus__menu__wrapper {
     flex-wrap: wrap;
-    gap: 19px 7px;
+    gap: 19px 0;
   }
 
   .bonus__menu__item {
     flex-direction: row;
     justify-content: flex-start;
 
-    width: 155px;
+    width: 49%;
     height: 55px;
     padding: 10px 15px;
   }
