--- a/app/scss/layout.scss
+++ b/app/scss/layout.scss
@@ -794,6 +794,10 @@ strong {
   }
 }
 
+.whole__section__wrapper {
+  
+}
+
 .whole__section__tab__header {
   display: flex;
   align-items: center;
